# PyTorch_ws

./: .gitignore  README.md
pytorch-notebook/custom-object-detection-with-yolo/: .gitignore  Train_YOLO_Models.ipynb  data.yaml  pyproject.toml  translate.py
pytorch-notebook/mnist_1/: .gitignore  hello.py  pyproject.toml  torch_test.ipynb
pytorch-notebook/pytorch-tutorial/: dataset_and_datalogger.ipynb  pyproject.toml  rcnn_resnet50.ipynb  torch_1.ipynb  自動微分.ipynb
pytorch-test/: main.py  pyproject.toml
